--- a/style.css
+++ b/style.css
@@ -94,7 +94,20 @@ a:hover {
     margin: 20px auto;
     background-color: #BDC7C9;
     box-shadow: 2px 10px 30px rgba(0,0,0,0.3);
+    text-align: center;
+}
 
+#grid-categ {
+    width: 200px;
+    margin: 20px 0px;
+    flex-grow: 1;
+}
+
+.card-categ {
+    width: 500px;
+    height: 50px;
+    border-radius: 10px;
+    margin: 20px 0px;
 }
 
 #footer {
@@ -139,6 +152,8 @@ i:hover {
     color: rgb(247,234,0);
 }
 
-    
+#special {
+    margin-bottom: 0px;
+}  
 
 
